fix for Tests